[package]
name = "shader-types"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = "Vector and Matrix types that are properly aligned for use in std140 uniforms"
readme = "README.md"
repository = "https://github.com/cwfitzgerald/shader-types"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["gamedev", "shaders", "graphics", "alignment", "std140"]
categories = ["graphics", "game-development"]

[dependencies]
bytemuck = { version = "1", optional = true }
zerocopy = { version = "0.3.0", optional = true }

[dev-dependencies]
bytemuck = { version = "1" }
