[package]
name = "shader-types"
version = "0.2.1"
authors = [
    "Connor Fitzgerald <connorwadefitzgerald@gmail.com>",
    "Lucien Greathouse <me@lpghatguy.com>",
]
edition = "2018"
description = "Vector and Matrix types that are properly aligned for use in std140 uniforms"
readme = "README.md"
repository = "https://github.com/BVE-Reborn/shader-types"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["gamedev", "shaders", "graphics", "alignment", "std140"]
categories = ["graphics", "game-development"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []

[dependencies]
bytemuck = { version = "1", optional = true }
mint = { version = "0.5.5", optional = true }

[dev-dependencies]
bytemuck = { version = "1" }
